--- a/play/templates/play/index.html
+++ b/play/templates/play/index.html
@@ -1,17 +1,36 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Ned Decker</title>
-    </head>
-    <body>
-    {% if top_5_decks %}
-        <ul>
-        {% for deck in top_5_decks %}
-        <li><a href="{% url 'play:play' %}">{{ deck.name }}</a></li>
+{% extends 'base.html' %}
+{% block content %}
+<script>
+function saveNameAndPlay(elem) {
+    var name = (elem.textContent || elem.innerText).trim();
+    console.log(name);
+    window.location.href = 'play/'.concat(name);
+}
+</script>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                Placeholder
+            </div>
+        </div>
+        {% for row in decks %}
+            <div class="row">
+                {% for deck in row %}
+                    <div class="col">
+                        <button type="button" class="btn" onClick="saveNameAndPlay(this);">
+                            {% if deck %}
+                                {{ deck.name }}
+                            {% else %}
+                                Custom Deck
+                            {% endif %}
+                        </button>
+                    </div>
+                {% empty %}
+                    <p>No decks are available.</p>
+                {% endfor %}
+            </div>
+            {% empty %}
+                <p>No decks are available.</p>
         {% endfor %}
-        </ul>
-{% else %}
-        <p>No decks are available.</p>
-{% endif %}
-    </body>
-</html>
+    </div>
+{% endblock %}
