--- a/play/templates/play/index.html
+++ b/play/templates/play/index.html
@@ -10,7 +10,7 @@ function saveNameAndPlay(elem) {
     <div class="container text-center">
         <div class="row">
             <div class="col">
-                Placeholder
+                Challenge Ned Decker with:
             </div>
         </div>
         {% for row in decks %}
