Use postgreSQL TrigramSimilarity and langchain ChatOpenAI

--- a/play/templates/play/play.html
+++ b/play/templates/play/play.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+GPT:
+{{ gpt | linebreaks }}
 You are playing: {{ user_deck.name }}
 <br></br>
 <p>Your main deck:</p>
